# facial-liveness-detection

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  extract.sh  main.py  pyproject.toml
configs/: default.yaml
docs/: 00_plan.md  01_data_unification.md  02_eda.md  03_model_architecture.md  04_training_protocol.md  05_results.md  06_presentation_outline.md  cli_reference.md  notes.md  paper.tex
notebooks/: 02_eda.ipynb  03_results.ipynb
scripts/: apply_enhancement.py  run_all_evals.py
src/: config.py  eda.py  eda_2.py  results_viz.py
src/data/: dataset.py  manifest.py  transforms.py
src/models/: attacknet_v22.py
src/preprocessing/: enhance.py  extract_3dmad.py  extract_csmad.py  extract_replay.py  face_pipeline.py
src/training/: cross_val.py  eval_runner.py  evaluate.py  metrics.py  train.py
src/tuning/: optuna_search.py
