[project]
name = "facial-liveness-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "albumentations>=2.0.8",
    "gradio>=6.14.0",
    "h5py>=3.16.0",
    "insightface>=0.7.3",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "onnxruntime-gpu>=1.25.1",
    "opencv-python>=4.13.0.92",
    "optuna>=4.8.0",
    "pandas>=3.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "gdown>=6.0.0",
    "jupyterlab>=4.5.7",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
